<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/background_color"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/tb"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:title="@string/add_record"
        android:background="@drawable/circle_toolbar"
        app:titleTextColor="@color/white"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="8sp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25sp"
            android:textSize="25sp"
            android:fontFamily="@font/somic_bold"
            android:textStyle="bold"
            android:text="@string/enter_data" />

        <EditText
            android:id="@+id/weight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25sp"
            android:backgroundTintMode="multiply"
            android:hint="@string/weight"
            android:fontFamily="@font/somic_regular"
            android:inputType="numberDecimal" />

        <EditText
            android:id="@+id/height"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTintMode="multiply"
            android:hint="@string/height"
            android:fontFamily="@font/somic_regular"
            android:inputType="numberDecimal" />

        <EditText
            android:id="@+id/alcoholStrength"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTintMode="multiply"
            android:hint="@string/drink_strength"
            android:fontFamily="@font/somic_regular"
            android:inputType="numberDecimal" />

        <EditText
            android:id="@+id/alcoholVolume"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTintMode="multiply"
            android:hint="@string/drink_volume"
            android:fontFamily="@font/somic_regular"
            android:inputType="numberDecimal" />

        <EditText
            android:id="@+id/time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTintMode="multiply"
            android:hint="@string/time"
            android:fontFamily="@font/somic_regular"
            android:inputType="number"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20sp"
            android:textSize="18sp"
            android:text="@string/gender"
            android:fontFamily="@font/somic_regular"
            android:layout_gravity="end"/>

        <RadioGroup
            android:id="@+id/genderGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="end">

            <RadioButton
                android:id="@+id/maleButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/male"
                android:fontFamily="@font/somic_vf"
                android:checked="true"/>

            <RadioButton
                android:id="@+id/femaleButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/somic_vf"
                android:text="@string/female"/>

        </RadioGroup>

        <Button
            android:id="@+id/calculateButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/somic_regular"
            android:text="@string/calculate" />

    </LinearLayout>

</LinearLayout>